# Cyber-Assessment-Reviewer

./: .dockerignore  .env.example  .gitignore  DOCKER_CONDA_IMPLEMENTATION_COMPLETE.md  DOCKER_CONDA_INTEGRATION_ANALYSIS.md  Dockerfile  Dockerfile.conda  Dockerfile.conda-debug  ENHANCEMENT_SUMMARY.md  FEEDBACK_SYSTEM_GUIDE.md  Makefile  README.md  SIMPLIFICATION_SUMMARY.md  accuracy_engine.py  adaptive_prompts.py  ai_accuracy_test_results.json  ai_backend.py  ai_validation.py  analysis_workflow.py  app.py  conda_manager.py  config.py  continuous_improvement.py  cyber-assessment-reviewerv37.py  cybersecurity_knowledge.py  docker-build-conda-debug.bat  docker-build-conda-fixed.bat  docker-build-conda.bat  docker-build-conda.sh  docker-build.sh  docker-compose.conda.yml  docker-compose.prod.yml  docker-compose.transformers.yml  docker-compose.yml  docker-deploy-conda.sh  docker-deploy.sh  docker-health-check.bat  docker-manage.bat  docker-test.sh  docker_conda_manager.py  (+36 more)
Sample_Assessments/: 812 _Test_Assessment_AN.xlsx
adaptive_prompts/: prompt_templates.json
analytics_data/: analytics_reports.json  report_20250617_024939.json  report_20250617_024950.json
data/ollama/: id_ed25519  id_ed25519.pub
docs/markdown/: AI_OPTIMIZATION_GUIDE.md  CONDA_IMPLEMENTATION_SUMMARY.md  DOCKER_SETUP.md  DOCKER_TROUBLESHOOTING.md  INSTALLATION_GUIDE.md  README.md  SERIALIZATION_FIX_SUMMARY.md  WINDOWS_DEPLOYMENT_GUIDE.md  WINDOWS_QUICK_REFERENCE.md
feedback_data/: feedback_entries.jsonl
improvement_cycles/: cycle_20250617_024817.json  cycle_20250617_024851.json  cycle_20250617_024934.json  cycle_20250617_024945.json
learning_reports/: learning_report_20250617_024817.json  learning_report_20250617_024851.json  learning_report_20250617_024934.json  learning_report_20250617_024945.json
nginx/: nginx.conf
previous versions/: cyber-assessment-reviewer.py  cyber-assessment-reviewer_v36.py  cyber-assessment-reviewer_v5.py  cyber-assessment-reviewerv34.py  cyber-assessment-reviewerv35.py  test-dependencies.py
sessions/778c9610-1f0e-4a51-945a-be34184aa387/: assessment_can_you_generate_a_fake_cybersecurity_assessment....xlsx  results.json
sessions/9e1b9cb1-4ff1-493e-8074-0c13b0af57f1/: controls.json
sessions/ae6715f5-e9cb-4005-a1c9-70294be5c683/: controls.json
sessions/c1e2cde8-fb26-4531-bcb5-98267aecb04e/: controls.json  results.json  (+2 more)
